JDK11 compat fixup